Share icon popup issue and icons spacing on Insights

--- a/app/assets/styles/modules/_insight.scss
+++ b/app/assets/styles/modules/_insight.scss
@@ -560,6 +560,7 @@
 #block-ourpopularcoursesblock {background-color: #ff006814; padding: 10px;}
 
 .share-icon{
-.a2a_kit {li {
+	li {
 	margin-bottom: 10px;
-}}}
+}
+}
